--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
-<h1>Hello Gitworld !</h1>
+<!DOCKTYPE  HTML>
+<html>
+    <head>
+        <h1>Hello Gitworld !</h1>
 
-<div>
-    <p>Working with Git is easy !</p>
-</div>
+        <div>
+            <p>Working with Git is easy !</p>
+        </div>
 
-<h2>Author: Kaustubh Prabhu</h2>
+        <h2>Author: Kaustubh Prabhu</h2>
 
-<div>
-    Take a look at the commit shas !
-</div>
+        <div>
+            Take a look at the commit shas !
+        </div>
 
-<div>
-    Added Some Code From GitHub
-</div>
-
+        <div>
+            Added Some Code From GitHub
+        </div>
+    </head>
+</html>>
 <!--Some Comments>
